# first-rust-project

first-rust-actix/: Cargo.toml  app_cfg.json
first-rust-actix/src/: app_cfg.rs  main.rs
first-rust-actix/src/req_handlers/: authentication.rs  mod.rs  proxy.rs
first-rust-actix/src/resource_reciever/: mod.rs
