[package]
name = "first-rust-actix"
version = "0.1.0"
authors = ["KonstmarNSK <konstmar@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
askama = {version = "0.8.0", features = ["with-actix-web"]}
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
diesel = { version = "1.0.0", features = ["postgres"] }
listenfd = "0.3"
dotenv = "0.9.0"
serde = "1.0.101"
serde_json = "1.0.41"